--- a/.github/workflows/auto-readme.yaml
+++ b/.github/workflows/auto-readme.yaml
@@ -17,12 +17,9 @@ jobs:
         uses: cflynn07/github-action-til-autoformat-readme@1.2.4
         with:
           description: |
-            A collection of concrete writeups of small things I learn daily while working
-            and researching. My goal is to work in public. I was inspired to start this
-            repository after reading Simon Wilson's [hacker new post][1], and he was
-            apparently inspired by Josh Branchaud's [TIL collection][2].
+            학습 조각 모음 Today I Learned
           footer: |
             [1]: https://simonwillison.net/2020/Apr/20/self-rewriting-readme/
             [2]: https://github.com/jbranchaud/til
-          list_most_recent: 2
+          # list_most_recent: 2
           date_format: "2020 Jan 15:04"
